--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <title>Fruits</title>
-    <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <title>Todo</title>
+ 
   </head>
   <body>
-    <div id="app"></div>
+    <section id="app" class="todoapp"></section>
     <script src="./client/index.tsx" type="module"></script>
   </body>
 </html>
